--- a/EHBO/Resources/layout/Alarmcontroller_Layout.axml
+++ b/EHBO/Resources/layout/Alarmcontroller_Layout.axml
@@ -7,32 +7,33 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MyActivity">
-  <TextView
-      android:id="@+id/textView"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginBottom="2dp"
-      android:text="@string/setttime"
-      android:textAppearance="?android:attr/textAppearanceLarge" />
-  <TimePicker
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_below="@id/textView"
-      android:id="@+id/timePicker" />
-  <Button
-      android:id="@+id/oneshotAlarm"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_alignParentLeft="true"
-      android:layout_alignParentStart="true"
-      android:layout_below="@+id/timePicker"
-      android:layout_marginBottom="20dp"
-      android:text="Start Alarm" />
-  <Button
-      android:id="@+id/stoprepeatingAlarm"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_below="@+id/oneshotAlarm"
-      android:text="Cancel Alarm" />
+    tools:context=".MyActivity"
+    tools:menu="menu">
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:text="@string/setttime"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+    <TimePicker
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView"
+        android:id="@+id/timePicker" />
+    <Button
+        android:id="@+id/oneshotAlarm"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/timePicker"
+        android:layout_marginBottom="20dp"
+        android:text="Start Alarm" />
+    <Button
+        android:id="@+id/stoprepeatingAlarm"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/oneshotAlarm"
+        android:text="Cancel Alarm" />
 </RelativeLayout>
