Pushing the bullshit

--- a/EHBO/Resources/layout/Main.axml
+++ b/EHBO/Resources/layout/Main.axml
@@ -4,21 +4,12 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:text="Android TimerTask"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_width="match_parent"
-        android:textSize="25dp"
-        android:padding="20dp"
-        android:gravity="center"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView1" />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tijd"
         android:hint="instelbare tijd"
-        android:textColor="#ff2196f3" />
+        android:textColor="#ffffff" />
     <Button
         android:text="set countdown"
         android:layout_width="match_parent"
@@ -67,7 +58,8 @@
             android:layout_alignParentLeft="true"
             android:layout_below="@id/ToggleKoffie"
             android:id="@+id/checkBox1"
-            android:checked="true" />
+            android:checked="true"
+            android:backgroundTint="#add8e6ff" />
         <CheckBox
             android:text="Licht"
             android:layout_width="150dp"
@@ -75,15 +67,15 @@
             android:layout_alignParentRight="true"
             android:layout_below="@id/ToggleLicht"
             android:id="@+id/checkBox2"
-            android:checked="true" />
+            android:checked="true"
+            android:backgroundTint="#ad3a70d3" />
         <Button
             android:text="@string/buttonAuto"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:id="@+id/autoConnect"
             android:layout_alignParentLeft="true"
-            android:layout_below="@id/checkBox1"
-            android:backgroundTint="#add8e6ff" />
+            android:layout_below="@id/checkBox1" />
         <TextView
             android:text="@string/arduino_server_connect"
             android:textAppearance="?android:attr/textAppearanceMedium"
