--- a/EHBO/Resources/layout/Wakescreen_Layout.axml
+++ b/EHBO/Resources/layout/Wakescreen_Layout.axml
@@ -7,7 +7,7 @@
     android:minWidth="25px"
     android:minHeight="25px">
     <ImageView
-        android:src="@android:drawable/ic_menu_gallery"
+        android:src="@drawable/exclamation_point"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/imageView1" />
